tests/pos/i9266.scala
import language.`3.1-migration`

def test = { implicit x: Int => x + x }